--- a/Main/pom.xml
+++ b/Main/pom.xml
@@ -68,6 +68,12 @@
         </dependency>
         <dependency>
             <groupId>net.pl3x.bukkit.chatapi</groupId>
+            <artifactId>ChatComponentAPI-v1_12_R1</artifactId>
+            <version>v1_12_R1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.pl3x.bukkit.chatapi</groupId>
             <artifactId>ChatComponentAPI-api</artifactId>
             <version>API</version>
             <scope>compile</scope>
